24.sep (db)
      - add Polish handbook
      - add default shortcuts for staff text and system text
      (ws)
      - fix: drop symbol to palette
      - more code for pianoroll editor
      (la)
      - add support for staff line count in MusicXML import & export
23.sep (ws)
      - created new "audio library" al subdirectory
      - moved warnPitchRange from style to preferences
22.sep (ws)
      - preparation for Japanese translation
      - add style "warnPitchRange" to style editor
      - fix image properties dialog title
      - fix: "flip stem doesn't work after editing the beam"
      (db)
      - rename Style menu item from "Edit Style" to "Edit General Style"
      - add text to some unlabeled buttons in prefdialog.ui (accessibility)
21.sep (ws)
      - added experimental extension "pianoroll" and "drumroll"
      - added command line switch for experimental extensions: "-e"
      - added "al" audio library
      (la)
      - first release of ABC import plugin. It calls a webservice
      - Change brasilian portuguese language name
20.sep (ws)
      - implement undo for tuplet properties change
      - updated instruments.xml from Magnus Johansson
      - new style values for arpeggios
      - allow to drag arpeggios
      - added vertical bracket line to arpeggio palette ("no arpeggio")
19.sep (ws)
      - Tuplet Properties: apply changes to all selected tuplets
18.sep (ws)
      - enhanced full measure rest layout
      - fix loading of drumset
17.sep (ws)
      - fix: "Two voices on same tone - render bug when repositioning"
      - changed the behaviour of multi measure rests
16.sep (ws)
      - fix "multi-voice" unison note heads jump"
      - fix track display in inspector
      - expose style parameter "show courtesy key signatures" in gui
      - generate courtesy key signatures
      (db)
      - add Brazilian Portuguese handbook
13.sep (ws)
      - remove buffer layer from fluid resulting in less midi jitter
12.sep (lv)